b72: -Now scrollbar thumbs are visible. -Fixed bug where website crashes on system invert or system choose (teacher side). -Error reports and signin issues are stored in the excel sheet now.

--- a/front_end/views/main.css
+++ b/front_end/views/main.css
@@ -72,12 +72,12 @@ legend
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #afa6a4;
+    background: #706766;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #afa6a4;
+    background: #5a5251;
 }
 
 .codebox-style
